<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>db_launcher</name>
  <version>0.0.0</version>
  <description>
  This node is responsible for launching the pipeline depending on the mission selected on the dashboard.
  </description>
  <maintainer email="digarcia@ethz.ch">Diego Garcia</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>vcu_msgs</depend>
  <depend>autonomous_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
