<?xml version="1.0"?>
<package format="3">
  <name>monitoring_msgs</name>
  <version>0.0.1</version>
  <description>Pipeline and Resource Monitoring messages</description>
  <maintainer email="johnemus@ethz.ch">spiasecki</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
