<?xml version="1.0"?>
<package format="3">
  <name>monitoring_pipelines</name>
  <version>0.0.1</version>
  <description>Monitoring for DV Pipeline</description>

  <maintainer email="johnemus@ethz.ch">Jonas Ohnemus</maintainer>
  <license>BSD</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>autonomous_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vcu_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>autonomous_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vcu_msgs</exec_depend>

  <depend>monitoring_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
