<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>static_tf_publisher</name>
  <version>0.0.0</version>
  <description>Perception static transform publisher for tf2</description>
  <maintainer email="m.mazzonelli@gmail.com">Matteo Mazzonelli</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <!--Other depends-->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
