<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acceleration_handler</name>
  <version>0.0.0</version>
  <description>
  This contains an acceleration handler. It has a mission ended condition. So it basically just tells the controller to stop whenever the distance of >75m is detected, and when the car has stopped publish "mission finished".
  For generating the path the car will follow there will be other nodes.
  </description>
  <maintainer email="digarcia@ethz.ch">Diego Garcia</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>vcu_msgs</depend>
  <depend>autonomous_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>generate_parameters_library</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
