<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acceleration_path_planner_basic</name>
  <version>0.0.0</version>
  <description>
    The handler detects the completition of the mission and publishes the target/max velocity
    Meanwhile the path planner only publishes the path. This is a basic version of the acceleration path planner it only publishes a straight line path.

    The division of the path planner and the handler is done to allow the path planner to be changed to a more complex one without changing the handler.
  </description>
  <maintainer email="digarcia@ethz.ch">Diego Garcia</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>autonomous_msgs</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>generate_parameters_library</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
