<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>min_curvature_opt</name>
  <version>0.0.0</version>
  <description>Implementation of the minimum curvature optimisation</description>
  <maintainer email="hakiyama@ethz.ch">Hironobu Akiyama</maintainer>
  <maintainer email="johnemus@ethz.ch">Jonas Ohnemus</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>interpolant_2d</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
