<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boundary_to_reference</name>
  <version>0.0.0</version>
  <description>ROS2 Node to convert Boundary to ControllerRef It should only be used for debuging when wanting to skip planning.</description>
  <maintainer email="digarcia@ethz.ch">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autonomous_msgs</depend>
  <depend>control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
