<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_planner</name>
  <version>0.0.0</version>
  <description>Global Planning</description>
  <maintainer email="hakiyama@ethz.ch">Hironobu Akiyama</maintainer>
  <maintainer email="johnemus@ethz.ch">Jonas Ohnemus</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>control_msgs</depend>
  <depend>vcu_msgs</depend>
  <depend>autonomous_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>min_curvature_opt</depend>
  <depend>generate_parameter_library</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
